	- Added Fl_Menu_::find_item by callback
	- Added loading jpeg images from memory
        - Added support for shortcuts for Fl_Input_, Fl_Value_Input, and 
	  Fl_Text_Display derived widgets (STR #1770)
        - Added Fl_Menu_ methods: insert(), find_index(), clear_submenu()
	- Hotspot behavior of fl_message() and other common dialogs is now
	  optional (STR #2561).

	  IDE support and command line build options

	- FLTK now supports Apple Xcode 3, MS VisualC 2008, and
	  MS VisualC 2010. MS VisualC 6 support is maintained as a
	  compatibility base for VisualC.net, etc. . FLTK continues
	  to support configure/make and improved CMake build files.
	- Added step by step README's for MSWindows, OS X, and four
	  Linux distros.
	- Added "ide" subdirectory for all IDE support files
	- Added template to generate new projects with Xcode.
	- Added --enable-cairo and --enable-cairoext  configure options.
	- redesigned CMake files (STR #2317).
	- The new configure option --enable-x11 (lowercase 'x') enables
	  Cygwin builds under Windows (with --enable-cygwin) to use X11
	  instead of GDI drawing (STR #2147, #2183) and is ignored otherwise.
	- Changed "fltk-config --post foo" to create an application
	  bundle rather than attaching a resource fork.
	- Changed default for configure option --with-links for common
	  misspellings on case sensitive file systems like Unix/Linux.
	  The new default is --without-links; use --with-links on
	  Unix/Linux only if you need the links (e.g. lowercase '.h')

	  Fluid

	- Added argument-less constructor in Fluid Widget Class
	- Added jpeg support to Fluid image() element
	- Added binary data type to Fluid
	- Empty functions in Fluid no longer create an
	  implementation (STR #2259)
	- Fixed internationalisation of menus using Fluid (STR #2246)
	- Fixed menu item counting issue in Fluid (STR #2322)
	- Fixed lost top item in Fluid's tree browser (STR #2233)
	- Fixed Fluid dependency on X11 (STR #2261)